# mcp_woocommerce_operator

./: .gitignore  README.md  pyproject.toml
docs/: API_REFERENCE.md  DEVELOPMENT_PLAN.md  EXAMPLES.md
mcp_woocommerce_operator/: __init__.py  mcp_woocommerce_operator.py  woocommerce_client.py
tests/: .env.example  __init__.py  test_e2e.py  test_live_endpoint.py  test_mcp_tools.py  test_woocommerce_client.py
